--- a/src/style.css
+++ b/src/style.css
@@ -26,6 +26,7 @@
     right: 0;
     height: 100%;
     position: absolute;
+    color: white;
     width: 50%;
     float: right;
     padding: 25px;
@@ -39,7 +40,7 @@
 
 #result h2{
     font-size: 190%;
-    color: white;
+    color: #B78E00;
 }
 
 
